--- a/css/main.css
+++ b/css/main.css
@@ -27,21 +27,34 @@ main{
     background-color: lightcoral;
     flex-grow: 1;
     overflow: auto;
+    padding-top: 8vh;
 
 
 }
 
 footer{
-    background-color: red;
+    background-color: blue;
     height: 10vh;
 }
 
 .cta-header{
+    display: flex;
     height: 8vh;
     width: 100%;
     text-align: right;
     background-color: rgba(0,0,0,0.3);
     position: fixed;
+    top: 0;
+    right: 0;
+    justify-content: flex-end;
+    padding: 20px 15px;
+
+}
+header.cta-header button{
+    align-self: center;
+    padding: 5px 10px;
+    border-radius: 20px;
+    border: 1px solid white;
 }
 
 ul.navbar{
