--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,20 @@ a.app:hover{
 .play-image:hover .fa-play-circle{
     display: block;
 }
+.footer-center .bar:hover .color-bar{
+    background-color: yellow;
+}
+
+.bar:hover{
+    cursor: pointer;
+}
+.footer-right .bar:hover .color-bar{
+    background-color: yellow;
+}
+
+.bar:hover .circle{
+    display: block;
+}
 
 /* Aside Section */
 
@@ -84,8 +98,12 @@ aside{
     padding: 15px
 }
 
-aside img{
+aside .logo-big{
     width: 80%;
+}
+aside .logo-small{
+    width: 15%;
+    display: none;
 }
 
 aside .aside-playlist .svg{
@@ -280,7 +298,7 @@ footer .footer-center .timeline{
 
 .footer-center .bar{
     height: 4px;
-    width: 400px;
+    width: 20vw;
     background-color: grey;
     border-radius: 5px;
     margin: 0 20px;
@@ -292,6 +310,19 @@ footer .footer-center .timeline{
     width: 20%;
     background-color: white;
     border-radius: 5px;
+    position: relative;
+}
+
+.circle{
+    width: 15px;
+    height: 15px;
+    background-color: white;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+    display: none;
 }
 
 footer .time{
@@ -315,9 +346,10 @@ footer .footer-right{
 
 .footer-right .bar .color-bar{
     height:4px;
-    width: 20%;
+    width: 40%;
     background-color: white;
     border-radius: 5px;
+    position: relative;
 }
 
 .footer-right .bar{
@@ -345,5 +377,41 @@ footer .footer-right{
     }
     ul.navbar li{
         margin-top: 10px;
+    }
+}
+
+@media screen and (max-width:500px){
+    aside ul:nth-of-type(2){
+        display: none;
+    }
+    span.grey, h4, hr{
+        display: none;
+    }
+   
+    aside .logo-big{
+        display: none;
+    }
+    aside .logo-small{
+        display: block;
+        width:20px;
+        margin: 0 auto;
+    }
+
+    aside{
+       width: 50px;
+       padding: 10 0;
+    }
+
+    aside img.svg.grey{
+        width: 40px;
+        margin-top: 20px;
+    }
+
+    .cta-header{
+        width:calc(100% - 50px);
+    }
+    .aside-account img{
+        width: 100%;
+        margin-top: 20px; 
     }
 }
